client/styles/chat.css
.open-chat {
    width: 70px;
    height: 70px;
    border: none;
    background: #59bb4c;
    color: #FFF;
    font-size: 24px;
    cursor: pointer;
    outline: none;
    position: fixed;
    top: 5%;
    right: 5%;
    z-index: 1;
    border-radius: 50%;
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
    transition: background-color 0.3s, transform 0.2s;
}

.open-chat:hover {
    background: #4ca746;
    transform: scale(1.1);
}

.open-chat::before {
    content: "\1F4AC";
    position: relative;
    left: 1px;
}

.logo {
    font-size: 28px;
    font-weight: bold;
    color: #002c53;
    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
}

.chat-screen {
    width: 290px;
    height: 70%;
    max-height: calc(100vh - 40px);
    overflow: auto;
    background-color: #fff;
    border-radius: 10px;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
    padding: 20px;
    display: none;
    border:#002c53 solid 5px;
    overflow-x: hidden;


}

.chat{
    position: fixed;
    top: 4%;
    left: 2%;
    transform: translate(-2%, -2%);
    z-index: 1;
}

.chat-screen.active {
    display: block;
}

.typebox {
    display: flex;
    align-items: center;
}

#message-input {
    flex: 1;
    padding: 6px;
    font-size: 13px;
    border: 1px solid #ccc;
    border-radius: 5px;
    margin-right: 8px;
}

#send-message {
    padding: 6px 10px;
    font-size: 13px;
    background-color: #d31d1d;
    color: #fff;
    border: none;
    border-radius: 7px;
    cursor: pointer;
    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
}

#send-message:hover {
    background-color: #7f2929;
}

.name {
    font-size: 13px;
    font-weight: bold;
    color: #FFF;
    padding: 2px 8px;
    border-radius: 20px;
    background-color: #59bb4c;
    display: inline-block;
    margin-right: 8px;
    max-width: 150px;
    word-wrap: break-word;
    transition: background-color 0.3s;
}

.name:hover {
    background-color: #4ca746;
}

.text-chat {
    font-size: 13px;
    color: #333;
    padding: 2px 8px;
    border-radius: 10px;
    background-color: #f2f2f2;
    display: flex; 
    margin-top: 2px;
    max-width: 150px;
    word-wrap: break-word;
    transition: background-color 0.3s;
}

.text-chat:hover {
    background-color: #ddd;
}

.message {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    justify-content: space-between;
}

.other-message .name {
    margin-bottom: 2px;
    margin-left: 150px;
}

.other-message .text-chat {
    margin-top: 2px; 
    margin-left: 150px;
    margin-bottom: 10px;
}

.my-message .name {
    margin-bottom: 2px;
    margin-right: 150px;
}

.my-message .text-chat {
    margin-top: 2px;
    margin-right: 150px;
    margin-bottom: 10px;
}

